Connexion / Inscription / API

--- a/page_connexion.html
+++ b/page_connexion.html
@@ -35,7 +35,7 @@
       
       </form>
         
-        <h4>Pas de compte ?  <a href="">Inscrivez vous !</a></h4>
+        <h4>Pas de compte ?  <a href="page_inscription.html">Inscrivez vous !</a></h4>
 
     </div>
 
