--- a/home_page.html
+++ b/home_page.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Votre site</title>
+    <title>MacLesggi</title>
     <link rel="stylesheet" href="style.css"> <!-- Assurez-vous de lier votre fichier CSS -->
 </head>
 <body>
