--- a/page_inscription.html
+++ b/page_inscription.html
@@ -13,7 +13,7 @@
       <h1 id="titre">Inscription</h1>
      
       <br>
-      <form action="" method="">
+      <form id="sign_in">
 
       <label class="espace" for="nom"><strong>Nom :</strong></label>
       <input type="text" id="nom" name="nom" required>
