--- a/home_page.html
+++ b/home_page.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>MacLesggi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.css" />
-    <link rel="stylesheet" href="style.css"> <!-- Assurez-vous de lier votre fichier CSS -->
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 </head>
 <body>
     <header>
         <nav>
-            <H3>MacLesggi</H3>
+            <h3 id="nom_site">MacLesggi</h3>
             <ul id="nav-bar">
-                <li id="active">Home</li>
-                <li>Calendar</li>
-                <li>Profil</li>
+                <li><span class="material-symbols-outlined">home</span> Home</li>
+                <li><span class="material-symbols-outlined">calendar_month</span> Calendar</li>
+                <li><span class="material-symbols-outlined">account_circle</span> Profil</li>
             </ul>
         </nav>
     </header>
@@ -41,38 +43,30 @@
             <li class="jour">LUN</li>
             <li class="jour">MAR</li>
         </ul>
-        <!-- Ajoutez cette balise canvas avec l'ID barChart -->
-        <canvas id="barChart" width="400" height="200"></canvas>
+    
+       
+        <div class="graphs">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-        <script>
-            // Données
-            let categories = ['Catégorie 1', 'Catégorie 2', 'Catégorie 3', 'Catégorie 4'];
-            let valeurs = [10, 24, 15, 30];
+            <div class="graphs-card">
+                <p class="graphs-title">Température (en °C)</p>
+                <div id="area-chart1"></div>
+            </div>
 
-            // Création d'un graphique à barres
-            let ctx = document.getElementById('barChart').getContext('2d');
-            let barChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: categories,
-                    datasets: [{
-                        label: 'Graphique à Barres',
-                        data: valeurs,
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-        </script>
+            <div class="graphs-card">
+                <p class="graphs-title">Pression (en hPa)</p>
+                <div id="area-chart2"></div>
+            </div>
+
+            <div class="graphs-card">
+                <p class="graphs-title">Humidité (en %)</p>
+                <div id="area-chart3"></div>
+            </div>
+
+        </div>
     </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
